--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "network": "npm run dev -- --host"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.3",
     "react": "^18.2.0",
