--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/stripe-js": "^3.1.0",
     "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
